compiling_error.txt
In file included from C:\Users\lisas\Desktop\UVA\Tweedejaarsproject\NearestNeighbor-GPU\nns.cpp:7:0:
c:\users\lisas\desktop\uva\tweedejaarsproject\nearestneighbor-gpu\generate_data.cpp:15:9: error: 'array' does not name a type
 typedef array<uint32_t, NW> bitvec_t;
         ^~~~~
c:\users\lisas\desktop\uva\tweedejaarsproject\nearestneighbor-gpu\generate_data.cpp:17:9: error: 'vector' does not name a type
 typedef vector<bitvec_t> list_t;
         ^~~~~~
c:\users\lisas\desktop\uva\tweedejaarsproject\nearestneighbor-gpu\generate_data.cpp:21:38: error: typedef 'callback_list_t' is initialized (use decltype instead)
 typedef void(*callback_list_t)(list_t);
                                      ^
c:\users\lisas\desktop\uva\tweedejaarsproject\nearestneighbor-gpu\generate_data.cpp:21:32: error: 'list_t' was not declared in this scope
 typedef void(*callback_list_t)(list_t);
                                ^~~~~~
c:\users\lisas\desktop\uva\tweedejaarsproject\nearestneighbor-gpu\generate_data.cpp:29:9: error: 'array' does not name a type
 typedef array<uint32_t, NW> bitvec_t;
         ^~~~~
c:\users\lisas\desktop\uva\tweedejaarsproject\nearestneighbor-gpu\generate_data.cpp:31:9: error: 'vector' does not name a type
 typedef vector<bitvec_t> list_t;
         ^~~~~~
c:\users\lisas\desktop\uva\tweedejaarsproject\nearestneighbor-gpu\generate_data.cpp:35:38: error: typedef 'callback_list_t' is initialized (use decltype instead)
 typedef void(*callback_list_t)(list_t);
                                      ^
c:\users\lisas\desktop\uva\tweedejaarsproject\nearestneighbor-gpu\generate_data.cpp:35:32: error: 'list_t' was not declared in this scope
 typedef void(*callback_list_t)(list_t);
                                ^~~~~~
c:\users\lisas\desktop\uva\tweedejaarsproject\nearestneighbor-gpu\generate_data.cpp:38:27: error: variable or field 'generate_random_list' declared void
 void generate_random_list(list_t& output, size_t n) {
                           ^~~~~~
c:\users\lisas\desktop\uva\tweedejaarsproject\nearestneighbor-gpu\generate_data.cpp:38:27: error: 'list_t' was not declared in this scope
c:\users\lisas\desktop\uva\tweedejaarsproject\nearestneighbor-gpu\generate_data.cpp:38:35: error: 'output' was not declared in this scope
 void generate_random_list(list_t& output, size_t n) {
                                   ^~~~~~
c:\users\lisas\desktop\uva\tweedejaarsproject\nearestneighbor-gpu\generate_data.cpp:38:50: error: expected primary-expression before 'n'
 void generate_random_list(list_t& output, size_t n) {
                                                  ^
